--- a/html/_modules/index.html
+++ b/html/_modules/index.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Overview: module code &#8212; Galaxy ProTo 1.1 documentation</title>
+    <title>Overview: module code &#8212; Galaxy ProTo 1.2 documentation</title>
     <link rel="stylesheet" href="../_static/haiku.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
     <script type="text/javascript" id="documentation_options" data-url_root="../" src="../_static/documentation_options.js"></script>
@@ -17,7 +17,7 @@
     <link rel="search" title="Search" href="../search.html" /> 
   </head><body>
       <div class="header" role="banner"><h1 class="heading"><a href="../index.html">
-          <span>Galaxy ProTo 1.1 documentation</span></a></h1>
+          <span>Galaxy ProTo 1.2 documentation</span></a></h1>
         <h2 class="heading"><span>Overview: module code</span></h2>
       </div>
       <div class="topnav" role="navigation" aria-label="top navigation">
@@ -32,6 +32,7 @@
         
   <h1>All modules for which code is available</h1>
 <ul><li><a href="proto/CommonFunctions.html">proto.CommonFunctions</a></li>
+<li><a href="proto/FileBrowser.html">proto.FileBrowser</a></li>
 <li><a href="proto/HtmlCore.html">proto.HtmlCore</a></li>
 <li><a href="proto/RSetup.html">proto.RSetup</a></li>
 <li><a href="proto/StaticFile.html">proto.StaticFile</a></li>
