--- a/html/_modules/proto/HtmlCore.html
+++ b/html/_modules/proto/HtmlCore.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>proto.HtmlCore &#8212; Galaxy ProTo 1.1 documentation</title>
+    <title>proto.HtmlCore &#8212; Galaxy ProTo 1.2 documentation</title>
     <link rel="stylesheet" href="../../_static/haiku.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
     <script type="text/javascript" id="documentation_options" data-url_root="../../" src="../../_static/documentation_options.js"></script>
@@ -17,7 +17,7 @@
     <link rel="search" title="Search" href="../../search.html" /> 
   </head><body>
       <div class="header" role="banner"><h1 class="heading"><a href="../../index.html">
-          <span>Galaxy ProTo 1.1 documentation</span></a></h1>
+          <span>Galaxy ProTo 1.2 documentation</span></a></h1>
         <h2 class="heading"><span>proto.HtmlCore</span></h2>
       </div>
       <div class="topnav" role="navigation" aria-label="top navigation">
@@ -187,11 +187,11 @@
         <span class="k">if</span> <span class="n">headerRow</span> <span class="ow">not</span> <span class="ow">in</span> <span class="p">[</span><span class="kc">None</span><span class="p">,</span> <span class="p">[]]:</span>
             <span class="k">if</span> <span class="n">tagRow</span> <span class="ow">is</span> <span class="kc">None</span><span class="p">:</span>
                 <span class="n">tagRow</span> <span class="o">=</span> <span class="p">[</span><span class="s1">&#39;&#39;</span><span class="p">]</span> <span class="o">*</span> <span class="nb">len</span><span class="p">(</span><span class="n">headerRow</span><span class="p">)</span>
-            <span class="bp">self</span><span class="o">.</span><span class="n">_str</span> <span class="o">+=</span> <span class="s1">&#39;&lt;tr&gt;&#39;</span>
             <span class="n">headerClassStr</span> <span class="o">=</span> <span class="s1">&#39; class=&quot;&#39;</span> <span class="o">+</span> <span class="s1">&#39; &#39;</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">headerClass</span><span class="o">.</span><span class="n">split</span><span class="p">())</span> <span class="o">+</span> <span class="s1">&#39;&quot;&#39;</span> \
                 <span class="k">if</span> <span class="n">headerClass</span> <span class="k">else</span> <span class="s1">&#39;&#39;</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">_str</span> <span class="o">+=</span> <span class="s1">&#39;&lt;tr</span><span class="si">%s</span><span class="s1">&#39;</span> <span class="o">%</span> <span class="n">headerClassStr</span> <span class="o">+</span> <span class="s1">&#39;&gt;&#39;</span>
             <span class="k">for</span> <span class="n">tag</span><span class="p">,</span> <span class="n">el</span> <span class="ow">in</span> <span class="nb">zip</span><span class="p">(</span><span class="n">tagRow</span><span class="p">,</span> <span class="n">headerRow</span><span class="p">):</span>
-                <span class="bp">self</span><span class="o">.</span><span class="n">_str</span> <span class="o">+=</span> <span class="s1">&#39;&lt;th</span><span class="si">%s</span><span class="s1">&#39;</span> <span class="o">%</span> <span class="n">headerClassStr</span> <span class="o">+</span> \
+                <span class="bp">self</span><span class="o">.</span><span class="n">_str</span> <span class="o">+=</span> <span class="s1">&#39;&lt;th&#39;</span> <span class="o">+</span> \
                              <span class="p">(</span><span class="s1">&#39; &#39;</span> <span class="o">+</span> <span class="n">tag</span> <span class="k">if</span> <span class="n">tag</span> <span class="o">!=</span> <span class="s1">&#39;&#39;</span> <span class="k">else</span> <span class="s1">&#39;&#39;</span><span class="p">)</span> <span class="o">+</span> \
                              <span class="s1">&#39;&gt;&#39;</span> <span class="o">+</span> <span class="n">unicode</span><span class="p">(</span><span class="n">el</span><span class="p">)</span> <span class="o">+</span> <span class="s1">&#39;&lt;/th&gt;&#39;</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">_str</span> <span class="o">+=</span> <span class="s1">&#39;&lt;/tr&gt;&#39;</span> <span class="o">+</span> <span class="n">os</span><span class="o">.</span><span class="n">linesep</span>
