--- a/html/_modules/proto/StaticFile.html
+++ b/html/_modules/proto/StaticFile.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>proto.StaticFile &#8212; Galaxy ProTo 1.1 documentation</title>
+    <title>proto.StaticFile &#8212; Galaxy ProTo 1.2 documentation</title>
     <link rel="stylesheet" href="../../_static/haiku.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
     <script type="text/javascript" id="documentation_options" data-url_root="../../" src="../../_static/documentation_options.js"></script>
@@ -17,7 +17,7 @@
     <link rel="search" title="Search" href="../../search.html" /> 
   </head><body>
       <div class="header" role="banner"><h1 class="heading"><a href="../../index.html">
-          <span>Galaxy ProTo 1.1 documentation</span></a></h1>
+          <span>Galaxy ProTo 1.2 documentation</span></a></h1>
         <h2 class="heading"><span>proto.StaticFile</span></h2>
       </div>
       <div class="topnav" role="navigation" aria-label="top navigation">
@@ -71,14 +71,14 @@
         <span class="k">return</span> <span class="n">os</span><span class="o">.</span><span class="n">sep</span><span class="o">.</span><span class="n">join</span><span class="p">([</span><span class="bp">self</span><span class="o">.</span><span class="n">STATIC_REL_PATH</span><span class="p">]</span> <span class="o">+</span> <span class="bp">self</span><span class="o">.</span><span class="n">_id</span><span class="p">)</span></div>
 
 <div class="viewcode-block" id="StaticFile.getLink"><a class="viewcode-back" href="../../proto.StaticFile.html#proto.StaticFile.StaticFile.getLink">[docs]</a>    <span class="k">def</span> <span class="nf">getLink</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">linkText</span><span class="p">):</span>
-        <span class="k">return</span> <span class="nb">str</span><span class="p">(</span><span class="n">HtmlCore</span><span class="p">()</span><span class="o">.</span><span class="n">link</span><span class="p">(</span><span class="n">linkText</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">getURL</span><span class="p">()))</span></div>
+        <span class="k">return</span> <span class="n">unicode</span><span class="p">(</span><span class="n">HtmlCore</span><span class="p">()</span><span class="o">.</span><span class="n">link</span><span class="p">(</span><span class="n">linkText</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">getURL</span><span class="p">()))</span></div>
         <span class="c1">#return &#39;&lt;a href=%s&gt;%s&lt;/a&gt;&#39; % (self.getURL(), linkText)</span>
 
 <div class="viewcode-block" id="StaticFile.getEmbeddedImage"><a class="viewcode-back" href="../../proto.StaticFile.html#proto.StaticFile.StaticFile.getEmbeddedImage">[docs]</a>    <span class="k">def</span> <span class="nf">getEmbeddedImage</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
-        <span class="k">return</span> <span class="nb">str</span><span class="p">(</span><span class="n">HtmlCore</span><span class="p">()</span><span class="o">.</span><span class="n">image</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">getURL</span><span class="p">()))</span></div>
+        <span class="k">return</span> <span class="n">unicode</span><span class="p">(</span><span class="n">HtmlCore</span><span class="p">()</span><span class="o">.</span><span class="n">image</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">getURL</span><span class="p">()))</span></div>
 
 <div class="viewcode-block" id="StaticFile.getLoadToHistoryLink"><a class="viewcode-back" href="../../proto.StaticFile.html#proto.StaticFile.StaticFile.getLoadToHistoryLink">[docs]</a>    <span class="k">def</span> <span class="nf">getLoadToHistoryLink</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">linkText</span><span class="p">,</span> <span class="n">galaxyDataType</span><span class="o">=</span><span class="s1">&#39;bed&#39;</span><span class="p">):</span>
-        <span class="k">return</span> <span class="nb">str</span><span class="p">(</span><span class="n">HtmlCore</span><span class="p">()</span><span class="o">.</span><span class="n">link</span><span class="p">(</span><span class="n">linkText</span><span class="p">,</span>
+        <span class="k">return</span> <span class="n">unicode</span><span class="p">(</span><span class="n">HtmlCore</span><span class="p">()</span><span class="o">.</span><span class="n">link</span><span class="p">(</span><span class="n">linkText</span><span class="p">,</span>
                                    <span class="n">getLoadToGalaxyHistoryURL</span>
                                    <span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">getDiskPath</span><span class="p">(</span><span class="n">relativeToBase</span><span class="o">=</span><span class="kc">True</span><span class="p">),</span>
                                     <span class="n">galaxyDataType</span><span class="o">=</span><span class="n">galaxyDataType</span><span class="p">,</span>
