--- a/html/_modules/proto/StaticFile.html
+++ b/html/_modules/proto/StaticFile.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>proto.StaticFile &#8212; Galaxy ProTo 1.2.1 documentation</title>
+    <title>proto.StaticFile &#8212; Galaxy ProTo 1.2.2 documentation</title>
     <link rel="stylesheet" href="../../_static/haiku.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
     <script type="text/javascript" id="documentation_options" data-url_root="../../" src="../../_static/documentation_options.js"></script>
@@ -17,7 +17,7 @@
     <link rel="search" title="Search" href="../../search.html" /> 
   </head><body>
       <div class="header" role="banner"><h1 class="heading"><a href="../../index.html">
-          <span>Galaxy ProTo 1.2.1 documentation</span></a></h1>
+          <span>Galaxy ProTo 1.2.2 documentation</span></a></h1>
         <h2 class="heading"><span>proto.StaticFile</span></h2>
       </div>
       <div class="topnav" role="navigation" aria-label="top navigation">
@@ -77,12 +77,12 @@
 <div class="viewcode-block" id="StaticFile.getEmbeddedImage"><a class="viewcode-back" href="../../proto.StaticFile.html#proto.StaticFile.StaticFile.getEmbeddedImage">[docs]</a>    <span class="k">def</span> <span class="nf">getEmbeddedImage</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="k">return</span> <span class="n">unicode</span><span class="p">(</span><span class="n">HtmlCore</span><span class="p">()</span><span class="o">.</span><span class="n">image</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">getURL</span><span class="p">()))</span></div>
 
-<div class="viewcode-block" id="StaticFile.getLoadToHistoryLink"><a class="viewcode-back" href="../../proto.StaticFile.html#proto.StaticFile.StaticFile.getLoadToHistoryLink">[docs]</a>    <span class="k">def</span> <span class="nf">getLoadToHistoryLink</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">linkText</span><span class="p">,</span> <span class="n">galaxyDataType</span><span class="o">=</span><span class="s1">&#39;bed&#39;</span><span class="p">):</span>
-        <span class="k">return</span> <span class="n">unicode</span><span class="p">(</span><span class="n">HtmlCore</span><span class="p">()</span><span class="o">.</span><span class="n">link</span><span class="p">(</span><span class="n">linkText</span><span class="p">,</span>
-                                   <span class="n">getLoadToGalaxyHistoryURL</span>
-                                   <span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">getDiskPath</span><span class="p">(</span><span class="n">relativeToBase</span><span class="o">=</span><span class="kc">True</span><span class="p">),</span>
-                                    <span class="n">galaxyDataType</span><span class="o">=</span><span class="n">galaxyDataType</span><span class="p">,</span>
-                                    <span class="n">histElementName</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">getId</span><span class="p">()[</span><span class="o">-</span><span class="mi">1</span><span class="p">])))</span></div>
+<div class="viewcode-block" id="StaticFile.getLoadToHistoryLink"><a class="viewcode-back" href="../../proto.StaticFile.html#proto.StaticFile.StaticFile.getLoadToHistoryLink">[docs]</a>    <span class="k">def</span> <span class="nf">getLoadToHistoryLink</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">linkText</span><span class="p">,</span> <span class="n">galaxyDataType</span><span class="o">=</span><span class="s1">&#39;bed&#39;</span><span class="p">,</span> <span class="n">histElementName</span><span class="o">=</span><span class="kc">None</span><span class="p">):</span>
+        <span class="k">return</span> <span class="n">unicode</span><span class="p">(</span><span class="n">HtmlCore</span><span class="p">()</span><span class="o">.</span><span class="n">link</span><span class="p">(</span>
+            <span class="n">linkText</span><span class="p">,</span> <span class="n">getLoadToGalaxyHistoryURL</span><span class="p">(</span>
+                <span class="bp">self</span><span class="o">.</span><span class="n">getDiskPath</span><span class="p">(</span><span class="n">relativeToBase</span><span class="o">=</span><span class="kc">True</span><span class="p">),</span>
+                <span class="n">galaxyDataType</span><span class="o">=</span><span class="n">galaxyDataType</span><span class="p">,</span>
+                <span class="n">histElementName</span><span class="o">=</span><span class="n">histElementName</span> <span class="k">if</span> <span class="n">histElementName</span> <span class="k">else</span> <span class="bp">self</span><span class="o">.</span><span class="n">getId</span><span class="p">()[</span><span class="o">-</span><span class="mi">1</span><span class="p">])))</span></div>
 
 <div class="viewcode-block" id="StaticFile.openRFigure"><a class="viewcode-back" href="../../proto.StaticFile.html#proto.StaticFile.StaticFile.openRFigure">[docs]</a>    <span class="k">def</span> <span class="nf">openRFigure</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">h</span><span class="o">=</span><span class="mi">600</span><span class="p">,</span> <span class="n">w</span><span class="o">=</span><span class="mi">800</span><span class="p">):</span>
         <span class="kn">from</span> <span class="nn">proto.RSetup</span> <span class="k">import</span> <span class="n">r</span>
@@ -233,7 +233,7 @@
       </div>
 
     <div class="footer" role="contentinfo">
-        &#169; Copyright 2018, Morten Johansen, Sveinung Gundersen, Geir Kjetil Sandve.
+        &#169; Copyright 2019, Morten Johansen, Sveinung Gundersen, Geir Kjetil Sandve.
       Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.8.2.
     </div>
   </body>
