--- a/html/_modules/proto/config/Config.html
+++ b/html/_modules/proto/config/Config.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>proto.config.Config &#8212; Galaxy ProTo 1.2.2 documentation</title>
+    <title>proto.config.Config &#8212; Galaxy ProTo 1.2.3 documentation</title>
     <link rel="stylesheet" href="../../../_static/haiku.css" type="text/css" />
     <link rel="stylesheet" href="../../../_static/pygments.css" type="text/css" />
     <script type="text/javascript" id="documentation_options" data-url_root="../../../" src="../../../_static/documentation_options.js"></script>
@@ -17,7 +17,7 @@
     <link rel="search" title="Search" href="../../../search.html" /> 
   </head><body>
       <div class="header" role="banner"><h1 class="heading"><a href="../../../index.html">
-          <span>Galaxy ProTo 1.2.2 documentation</span></a></h1>
+          <span>Galaxy ProTo 1.2.3 documentation</span></a></h1>
         <h2 class="heading"><span>proto.config.Config</span></h2>
       </div>
       <div class="topnav" role="navigation" aria-label="top navigation">
@@ -40,20 +40,28 @@
     <span class="k">return</span> <span class="n">prefix</span> <span class="k">if</span> <span class="n">filterWith</span> <span class="o">==</span> <span class="s1">&#39;proxy-prefix&#39;</span> <span class="k">else</span> <span class="s1">&#39;&#39;</span></div>
 
 
+<span class="k">def</span> <span class="nf">_getFullPathFromConfig</span><span class="p">(</span><span class="n">galaxyBaseDir</span><span class="p">,</span> <span class="n">configPath</span><span class="p">):</span>
+    <span class="k">return</span> <span class="n">configPath</span> <span class="k">if</span> <span class="n">configPath</span><span class="o">.</span><span class="n">startswith</span><span class="p">(</span><span class="s1">&#39;/&#39;</span><span class="p">)</span> <span class="k">else</span> \
+        <span class="s1">&#39;/&#39;</span><span class="o">.</span><span class="n">join</span><span class="p">([</span><span class="n">galaxyBaseDir</span><span class="p">,</span> <span class="n">configPath</span><span class="p">])</span>
+
+
 <span class="n">config</span> <span class="o">=</span> <span class="n">GalaxyConfigParser</span><span class="p">()</span>
 
 <span class="k">if</span> <span class="ow">not</span> <span class="nb">globals</span><span class="p">()</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="s1">&#39;URL_PREFIX&#39;</span><span class="p">):</span>
     <span class="n">URL_PREFIX</span> <span class="o">=</span> <span class="n">getUrlPrefix</span><span class="p">(</span><span class="n">config</span><span class="p">)</span>
 
-<span class="n">GALAXY_FILE_PATH</span> <span class="o">=</span> <span class="n">GALAXY_BASE_DIR</span> <span class="o">+</span> <span class="s1">&#39;/&#39;</span> <span class="o">+</span> <span class="n">config</span><span class="o">.</span><span class="n">getWithDefault</span><span class="p">(</span><span class="s1">&#39;file_path&#39;</span><span class="p">,</span> <span class="s1">&#39;database/files&#39;</span><span class="p">)</span>
-<span class="n">GALAXY_REL_TOOL_CONFIG_FILE</span> <span class="o">=</span> <span class="n">config</span><span class="o">.</span><span class="n">getWithDefault</span><span class="p">(</span><span class="s1">&#39;tool_config_file&#39;</span><span class="p">,</span> <span class="s1">&#39;config/tool_conf.xml&#39;</span><span class="p">)</span>
+<span class="n">GALAXY_INI_FILE_PATH</span> <span class="o">=</span> <span class="n">config</span><span class="o">.</span><span class="n">getWithDefault</span><span class="p">(</span><span class="s1">&#39;file_path&#39;</span><span class="p">,</span> <span class="s1">&#39;database/files&#39;</span><span class="p">)</span>
+<span class="n">GALAXY_FILE_PATH</span> <span class="o">=</span> <span class="n">_getFullPathFromConfig</span><span class="p">(</span><span class="n">GALAXY_BASE_DIR</span><span class="p">,</span> <span class="n">GALAXY_INI_FILE_PATH</span><span class="p">)</span>
+
+<span class="n">GALAXY_INI_TOOL_CONFIG_FILE</span> <span class="o">=</span> <span class="n">config</span><span class="o">.</span><span class="n">getWithDefault</span><span class="p">(</span><span class="s1">&#39;tool_config_file&#39;</span><span class="p">,</span> <span class="s1">&#39;config/tool_conf.xml&#39;</span><span class="p">)</span>
+<span class="n">GALAXY_TOOL_CONFIG_FILE</span> <span class="o">=</span> <span class="n">_getFullPathFromConfig</span><span class="p">(</span><span class="n">GALAXY_BASE_DIR</span><span class="p">,</span> <span class="n">GALAXY_INI_TOOL_CONFIG_FILE</span><span class="p">)</span>
+
 <span class="n">ADMIN_USERS</span> <span class="o">=</span> <span class="p">[</span><span class="n">username</span><span class="o">.</span><span class="n">strip</span><span class="p">()</span> <span class="k">for</span> <span class="n">username</span> <span class="ow">in</span>
                <span class="n">config</span><span class="o">.</span><span class="n">getWithDefault</span><span class="p">(</span><span class="s1">&#39;admin_users&#39;</span><span class="p">,</span> <span class="s1">&#39;&#39;</span><span class="p">)</span><span class="o">.</span><span class="n">split</span><span class="p">(</span><span class="s1">&#39;,&#39;</span><span class="p">)]</span>
 <span class="n">RESTRICTED_USERS</span> <span class="o">=</span> <span class="p">[</span><span class="n">username</span><span class="o">.</span><span class="n">strip</span><span class="p">()</span> <span class="k">for</span> <span class="n">username</span> <span class="ow">in</span>
                     <span class="n">config</span><span class="o">.</span><span class="n">getWithDefault</span><span class="p">(</span><span class="s1">&#39;restricted_users&#39;</span><span class="p">,</span> <span class="s1">&#39;&#39;</span><span class="p">,</span> <span class="s1">&#39;galaxy_proto&#39;</span><span class="p">)</span><span class="o">.</span><span class="n">split</span><span class="p">(</span><span class="s1">&#39;,&#39;</span><span class="p">)]</span>
 <span class="n">OUTPUT_PRECISION</span> <span class="o">=</span> <span class="nb">int</span><span class="p">(</span><span class="n">config</span><span class="o">.</span><span class="n">getWithDefault</span><span class="p">(</span><span class="s1">&#39;output_precision&#39;</span><span class="p">,</span> <span class="s1">&#39;4&#39;</span><span class="p">,</span> <span class="s1">&#39;galaxy_proto&#39;</span><span class="p">))</span>
 
-<span class="n">GALAXY_TOOL_CONFIG_FILE</span> <span class="o">=</span> <span class="n">GALAXY_BASE_DIR</span> <span class="o">+</span> <span class="s1">&#39;/&#39;</span> <span class="o">+</span> <span class="n">GALAXY_REL_TOOL_CONFIG_FILE</span>
 <span class="n">PROTO_TOOL_DIR</span> <span class="o">=</span> <span class="n">GALAXY_BASE_DIR</span> <span class="o">+</span> <span class="s1">&#39;/lib/proto/tools&#39;</span>
 <span class="n">PROTO_TOOL_SHELVE_FN</span> <span class="o">=</span> <span class="n">GALAXY_BASE_DIR</span> <span class="o">+</span> <span class="s1">&#39;/database/proto-tool-cache.shelve&#39;</span>
 <span class="n">CONFIG_DIR</span> <span class="o">=</span> <span class="n">GALAXY_BASE_DIR</span> <span class="o">+</span> <span class="s1">&#39;/config&#39;</span>
